# a-journey-in-the-dark

./: .gitignore  Cargo.toml  Launch Game Object Editor.command  MULTIPLAYER_TEST.md  README.md  game_config.toml  game_object_schema.json  run_editor.sh  run_server.sh
Game Object Editor.app/Contents/: Info.plist
Game Object Editor.app/Contents/MacOS/: GameObjectEditor
client/: game.js  gameconsole.js  index.html  webgl_lighting.js  webgl_renderer.js
src/: ai.rs  api.rs  chest.rs  combat.rs  config.rs  consumable.rs  dungeon.rs  entity.rs  game.rs  game_object.rs  game_object_registry.rs  game_state.rs  main.rs  map_generator.rs  message.rs  schema.rs  tile.rs  tile_registry.rs
src/game_object/: interactable.rs  mod.rs  object.rs  registry.rs  schema.rs
tools/: GameEditor.py  README.md  game_object_editor.py  requirements.txt  run_editor.sh  setup.sh
