[package]
name = "tosprite"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
rand = "0.8"
futures-util = "0.3"

